Changed colors and fixed visibility issues

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,6 @@
 :root {
-  --neutral-clr-100: hsl(0, 0%, 100%);
-  --neutral-clr-900: hsl(0, 0%, 0%);
+  --neutral-clr-100: hsl(60, 35%, 90%);
+  --neutral-clr-900: hsl(204, 19%, 5%);
 
   --fs-300: 0.75rem;
   --fs-400: 1.125rem;
@@ -119,7 +119,7 @@ button {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  opacity: 25%;
+  opacity: 20%;
   z-index: -1;
 }
 
